--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /portfolio/
         
   - title: "Machine Learning"
-    url: /year-archive/
+    url: /mytalks/
     
   - title: "CV"
     url: /cv/
