--- a/_config.yml
+++ b/_config.yml
@@ -34,11 +34,11 @@ author:
   codepen          : # Username
   dribbble         : # Username
   github           : "nuneskris"
-  kaggle           : # Username  
+  kaggle           : "krisnunes"
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -47,7 +47,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "krisnunes"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -199,7 +199,7 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
-  talks:
+  mypublications:
     output: true
     permalink: /:collection/:path/
 
@@ -251,14 +251,15 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
+  # _mypublication
   - scope:
-      path: ""
-      type: talks
+     path: ""
+      type: mypublications
     values:
-      layout: talk
+      layout: single
       author_profile: true
       share: true
+      comments: true
 
 
 # Sass/SCSS
