--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,8 @@
 # main links links
 main:
+  - title: "101"
+    url: /portfolio/
+    
   - title: "Data Architecture"
     url: /publications/
 
@@ -8,10 +11,7 @@ main:
 
   - title: "Technology"
     url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
+       
   - title: "Machine Learning"
     url: /year-archive/
     
