--- a/_config.yml
+++ b/_config.yml
@@ -202,6 +202,9 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  markdowns:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -259,6 +262,15 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # markdowns
+  - scope:
+      path: ""
+      type: markdowns
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 
 
 # Sass/SCSS
