--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # main links links
 main:
-  - title: "Foundation"
+  - title: "Data Foundation"
     url: /portfolio/
     
   - title: "Data Architecture"
