--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "Data Engineering"
     url: /talks/    
 
-  - title: "Technology"
+  - title: "Data Technology"
     url: /teaching/    
        
   - title: "Machine Learning"
